Fix z-index of styles check

--- a/public/output.css
+++ b/public/output.css
@@ -4334,18 +4334,6 @@ html {
   width: 100%;
 }
 
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-2\/5 {
-  width: 40%;
-}
-
 .max-w-xs {
   max-width: 20rem;
 }
@@ -4384,12 +4372,12 @@ html {
   resize: both;
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -4402,10 +4390,6 @@ html {
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.items-start {
-  align-items: flex-start;
 }
 
 .items-end {
@@ -4430,10 +4414,6 @@ html {
 
 .self-center {
   align-self: center;
-}
-
-.justify-self-start {
-  justify-self: start;
 }
 
 .rounded-full {
@@ -4828,7 +4808,7 @@ html {
   margin-top: 80px;
   margin-right: 10px;
   border: 1px solid #639d80;
-  z-index: 6;
+  z-index: 11;
   overflow: scroll;
 }
 
