--- a/public/styles.css
+++ b/public/styles.css
@@ -156,7 +156,7 @@
   margin-top: 80px;
   margin-right: 10px;
   border: 1px solid #639d80;
-  z-index: 6;
+  z-index: 11;
   overflow: scroll;
 }
 
